--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "deno:gen": "nearleyc src/syntax/main.ne -o .deno/syntax/main.ne.ts && nearleyc src/literal-syntaxes/array.ne -o .deno/literal-syntaxes/array.ne.ts&& nearleyc src/literal-syntaxes/geometric.ne -o .deno/literal-syntaxes/geometric.ne.ts&& nearleyc src/literal-syntaxes/interval.ne -o .deno/literal-syntaxes/interval.ne.ts&& nearleyc src/literal-syntaxes/interval-iso.ne -o .deno/literal-syntaxes/interval-iso.ne.ts",
     "build:deno": "rimraf .deno && node ./deno-transpile.js --copy && npm run deno:gen && node ./deno-transpile.js --process",
     "test": "mochapack src/**/*.spec.ts",
+    "testx": "mochapack src/plpgsql-syntax/plpgsql.spec.ts",
     "cover": "cross-env NODE_ENV=coverage nyc --reporter=lcov --reporter=text npm run test"
   },
   "author": "Olivier Guimbal",
