--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "8.1.1",
   "description": "Yet another simple Postgres SQL parser/modifier",
   "main": "index.js",
-  "files": "lib/**/*",
+  "files": ["lib/**/*"],
   "repository": "https://github.com/oguimbal/pgsql-ast-parser",
   "scripts": {
     "start": "webpack --config webpack.config.js",
