--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
   "name": "pgsql-ast-parser",
   "version": "8.1.1",
   "description": "Yet another simple Postgres SQL parser/modifier",
-  "main": "index.js",
-  "files": ["lib/**/*"],
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "files": [
+    "lib/**/*.js",
+    "lib/**/*.js.map",
+    "lib/**/*.ts"
+  ],
   "repository": "https://github.com/oguimbal/pgsql-ast-parser",
   "scripts": {
     "start": "webpack --config webpack.config.js",
