--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": [
-    "lib/*"
+    "lib/**/*",
+    "lib/**/*.js",
+    "lib/**/*.js.map",
+    "lib/**/*.ts",
+    "lib/*",
+    "lib",
+    "/lib/"
   ],
   "repository": "https://github.com/oguimbal/pgsql-ast-parser",
   "scripts": {
