Trying to fix "files"

--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "types": "lib/index.d.ts",
   "files": [
     "src/",
-    "lib/"
+    "lib/",
+    "tsconfig.json",
+    "webpack.config.js",
+    "nearley-loader.js"
   ],
   "repository": "https://github.com/oguimbal/pgsql-ast-parser",
   "scripts": {
